Updated netlify-link and favicon

--- a/code/index.html
+++ b/code/index.html
@@ -1,153 +1,128 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Good News</title>
+	<head>
+		<meta charset="utf-8" />
+		<title>Good News</title>
 
-    <!-- Google Font Montserrat -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+		<!-- Google Font Montserrat -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
 
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+		<!-- Favicon -->
+		<link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png" />
+		<link rel="manifest" href="./favicon_io/site.webmanifest" />
 
-    <!-- CSS Stylesheet -->
-    <link rel="stylesheet" href="./style.css"/>
+		<!-- CSS Stylesheet -->
+		<link rel="stylesheet" href="./style.css" />
 
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/1c9ad4b785.js" crossorigin="anonymous"></script>
+		<!-- Font Awesome -->
+		<script src="https://kit.fontawesome.com/1c9ad4b785.js" crossorigin="anonymous"></script>
 
-    <!-- Meta tag for responsiveness -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+		<!-- Meta tag for responsiveness -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	</head>
 
-  <body>
+	<body>
+		<!-- Header and navbar -->
+		<header id="header">
+			<div class="flex-header">
+				<div class="navbar-brand-flex">
+					<a class="navbar-brand" href="./index.html">Good News</a>
+				</div>
+				<nav>
+					<ul class="flex-navbar">
+						<li class="flex-child">
+							<a class="navbar" href="#">Human Rights</a>
+						</li>
+						<li class="flex-child">
+							<a class="navbar" href="#">Climate Change</a>
+						</li>
+						<li class="flex-child">
+							<a class="navbar" href="#">Technology</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
+		</header>
 
-    <!-- Header and navbar -->
-    <header id="header">
-      <div class="flex-header">
-        <div class="navbar-brand-flex">
-          <a class="navbar-brand" href="./index.html">Good News</a>
-        </div>
-        <nav>
-          <ul class="flex-navbar">
-            <li class="flex-child">
-              <a class="navbar" href="#">Human Rights</a>
-            </li>
-            <li class="flex-child">
-              <a class="navbar" href="#">Climate Change</a>
-            </li>
-            <li class="flex-child">
-              <a class="navbar" href="#">Technology</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+		<div class="container">
+			<!-- The big news content -->
+			<section class="hero-section">
+				<article class="hero-article">
+					<div class="hero-image-container">
+						<img class="hero-image" src="https://images.unsplash.com/photo-1583971663176-dd7180de1b76?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1947&q=80" alt="women-empowerment" />
+					</div>
 
-    <div class="container">
+					<div class="hero-text">
+						<h1 class="hero-headline-1">Quis imperdiet massa</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore aliqua. Commodo quis imperdiet massa tincidunt.</p>
+						<p class="hidden-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Purus non enim praesent facilisis.</p>
+						<p class="hidden-paragraph-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci phasellus egestas tellusic.</p>
+					</div>
+				</article>
+			</section>
 
-      <!-- The big news content -->
-      <section class="hero-section">
-        <article class="hero-article">
-          <div class="hero-image-container">
-            <img class="hero-image" src="https://images.unsplash.com/photo-1583971663176-dd7180de1b76?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1947&q=80" alt="women-empowerment"/>
-          </div>
+			<!-- More news content -->
+			<section class="small-news-section">
+				<article class="small-articles">
+					<img class="small-news-images" src="https://images.unsplash.com/photo-1564694457547-6ea79902e0be?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="pride" />
+					<h2>This is a headline</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</article>
 
-          <div class="hero-text">
-            <h1 class="hero-headline-1">Quis imperdiet massa</h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore aliqua. Commodo quis imperdiet massa tincidunt.
-            </p>
-            <p class="hidden-paragraph">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna. Purus non enim praesent facilisis. 
-            </p>
-            <p class="hidden-paragraph-2">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Orci phasellus egestas tellusic.
-            </p>
-          </div>
-        </article>
-      </section>
+				<article class="small-articles">
+					<img class="small-news-images" src="https://images.unsplash.com/photo-1556648011-e01aca870a81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80" alt="rainforest" />
+					<h2>This is a headline</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</article>
 
-      <!-- More news content -->
-      <section class="small-news-section">
-        <article class="small-articles">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1564694457547-6ea79902e0be?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=80" alt="pride"/>
-          <h2>This is a headline</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          </p>
-        </article>
+				<article class="small-articles">
+					<img class="small-news-images" src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2089&q=80" alt="covid-19" />
+					<h2>This is a headline</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</article>
 
-        <article class="small-articles">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1556648011-e01aca870a81?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2000&q=80" alt="rainforest"/>
-          <h2>This is a headline</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          </p>
-        </article>
+				<article class="small-articles">
+					<img class="small-news-images" src="https://images.unsplash.com/photo-1587125507575-7451184560a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1898&q=80" alt="polar-bear" />
+					<h2>This is a headline</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</article>
 
-        <article class="small-articles">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1584036561566-baf8f5f1b144?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2089&q=80" alt="covid-19"/>
-          <h2>This is a headline</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          </p>
-        </article>
+				<article class="small-articles">
+					<img class="small-news-images" src="https://images.unsplash.com/photo-1533229394718-02d54f4a108e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="droner" />
+					<h2>This is a headline</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</article>
 
-        <article class="small-articles">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1587125507575-7451184560a6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1898&q=80" alt="polar-bear"/>
-          <h2>This is a headline</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          </p>
-        </article>
+				<article class="small-articles">
+					<img class="small-news-images" src="https://images.unsplash.com/photo-1591189327503-5053a8aed8d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="black-lives-matter" />
+					<h2>This is a headline</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</article>
 
-        <article class="small-articles">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1533229394718-02d54f4a108e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80" alt="droner"/>
-          <h2>This is a headline</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          </p>
-        </article>
+				<article class="small-articles">
+					<img class="small-news-images" src="https://images.unsplash.com/photo-1496331285476-d13f7fd07d99?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2467&q=80" alt="Sierra-Leones" />
+					<h2>This is a headline</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</article>
 
-        <article class="small-articles">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1591189327503-5053a8aed8d8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="black-lives-matter"/>
-          <h2>This is a headline</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          </p>
-        </article>
+				<article class="small-articles">
+					<img class="small-news-images" src="https://images.unsplash.com/photo-1608387371413-f2566ac510e0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80" alt="plant-building" />
+					<h2>This is a headline</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</article>
+			</section>
+		</div>
 
-        <article class="small-articles">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1496331285476-d13f7fd07d99?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2467&q=80" alt="Sierra-Leones"/>
-          <h2>This is a headline</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          </p>
-        </article>
-
-        <article class="small-articles">
-          <img class="small-news-images" src="https://images.unsplash.com/photo-1608387371413-f2566ac510e0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80" alt="plant-building"/>
-          <h2>This is a headline</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          </p>
-        </article>
-      </section>
-    </div>
-
-    <footer>
-      <div class="footer-button">
-        <a href="#header">
-          <i class="far fa-arrow-alt-circle-up"></i>
-        </a>
-      </div>
-    </footer>
-
-  </body>
+		<footer>
+			<div class="footer-button">
+				<a href="#header">
+					<i class="far fa-arrow-alt-circle-up"></i>
+				</a>
+			</div>
+		</footer>
+	</body>
 </html>
