--- a/code/index.html
+++ b/code/index.html
@@ -2,15 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
+  <div class="pagewrapper">
     <header>
-      <!-- Some kind of logo and navbar -->
+    <img src="project-news-site/code/news-site-logo.svg" alt="news site logo" class="logo">
     </header>
-
+  
     <section class="big-news">
       <!-- The big news content -->
     </section>
@@ -18,5 +20,8 @@
     <section class="">
       <!-- The other news  -->
     </section>
-  </body>
+  </div>
+</body>
 </html>
+
+
