--- a/code/index.html
+++ b/code/index.html
@@ -26,85 +26,86 @@
           </ul>  
         </nav>
     </header>
-    <img src="bg-header" alt="" class="bg-header">
+    <div class="animation-line"></div>
+  
   <!-- The big news content -->
-  <div class="pagewrapper">
-    <section class="main-news">
-        <div class="main-news-img">
-          <img src="main-news.jpg" alt="">
+  <section class="main-news">
+    <div class="main-news-img">
+      <img src="main-news.jpg" alt="">
       </div>
-        <h2>Koh Samui sandbox approved</h2>
-          <p class="date">Published on Jan 14</p>
-            <div class="content-main">
-              <p>From December 22nd 2021, Thailand has canceled their Test & Go program meaning all tourists travel by air need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.</p>
-              <p>Luckily, Thailand has decided to open more destinations for their sandbox program. One of them includes the beautiful paradise island "Koh Samui".</p>
-            </div>    
-              <p class="read-more">Read more.</p>
-    </section>
-          <!-- The other news  -->
+      <div class="main-news-content">
+        <h2>Koh Samui sandbox approved by the government</h2>
+              <p>From December 22nd 2021, Thailand has canceled their Test & Go program meaning all tourists travel by air need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
+              Luckily, Thailand has decided to open more destinations for their sandbox program. One of them includes the beautiful paradise island "Koh Samui".</p>
+            <a href="#" class="read-more">Read more</a>
+      </div>    
+  </section>
+  <!-- The other news  -->
+  <div class="pagewrapper">
+          <img src="bg-header.jpg" alt="" class="header-img">
     <section class="other-news 1">
       <div class="other-news-img">
         <img src="other-news-1.jpg" alt="">
-      </div>
           <h2>PM2.5 worsen during Chinese New Year</h2>
+        </div>
             <p class="other-news-content">More burning during Chinese New Year and the cold air in January are the perfect combination of the beginning of Bankokians' lung cancer journey</p>
-             <p class="read-more">Read more.
+            <a href="#" class="read-more">Read more</a>
     </section>
     <section class="other-news 2">
       <div class="other-news-img">
         <img src="other-news-2.jpg" alt="">
-      </div>
-          <h2>Bangkok plans to remove mass electric cable on pole in 2059</h2>
+          <h2>Bangkok plans to remove mass electric cables wiring on pole</h2>
+        </div>
             <p class="other-news-content">Bangkok surely does not want to loose its chaotic charm. We can talk about safety later because the cables have been there forever and no one dies so far (or noone knows).</p>
-             <p class="read-more">Read more.
+            <a href="#" class="read-more">Read more</a>
     </section>
     <section class="other-news 3">
       <div class="other-news-img">
         <img src="other-news-3.jpg" alt="">
-      </div>
         <h2>Social distancing applies in water</h2>
+      </div>
           <p class="other-news-content">No exceptions, tourists renting paddle boats are to keep distance from others. Yet visiting public parks and rent a paddle boat are still worth it.</p>
-           <p class="read-more">Read more.
+          <a href="#" class="read-more">Read more</a>
     </section>
     <section class="other-news 4">
       <div class="other-news-img">
         <img src="other-news-4.jpg" alt="">
-      </div>
         <h2>Bangkok nightlife without tourists</h2>
+      </div>
           <p class="other-news-content">2022 for Bangkok is just 2020 part II, the country's vaccination rate is still not as expected making its people worried about welcoming tourists back in to Thailand.</p>
-           <p class="read-more">Read more.
+          <a href="#" class="read-more">Read more</a>
     </section>
     <section class="other-news 5">
       <div class="other-news-img">
         <img src="other-news-5.jpg" alt="">
-      </div>
       <h2>City trains are for rich people</h2>
+    </div>
         <p class="other-news-content">Public transportation should not be too expensive. Bangkokians complain the Bangkok City Train fares are not in line with the minimum wage.</p>
-         <p class="read-more">Read more.
+        <a href="#" class="read-more">Read more</a>
     </section>
     <section class="other-news 6">
       <div class="other-news-img">
         <img src="other-news-6.jpg" alt="">
-      </div>
       <h2>Newspapers are dying</h2>
+    </div>
         <p class="other-news-content">With the rise of online news, the newspapers are dying. Sadly some people believe social media posts from random people are trustworthy-online news.</p>
-         <p class="read-more">Read more.
+        <a href="#" class="read-more">Read more</a>
     </section>
     <section class="other-news 7">
       <div class="other-news-img">
        <img src="other-news-7.jpg" alt="">
-      </div>
       <h2>Monsoon arrives too soon</h2>
+    </div>
         <p class="other-news-content">Heavy rains start hitting bangkok in January. Good news is that it helps clear the PM2.5 and make it easier for Bangkokians to breath for once.</p>
-         <p class="read-more">Read more.
+        <a href="#" class="read-more">Read more</a>
     </section>
     <section class="other-news 8">
       <div class="other-news-img">
         <img src="other-news-8.jpg" alt="">
-     </div>
       <h2>Confusion around Thailand Pass</h2>
+    </div>
         <p class="other-news-content">There is still conflicting imformation on the internet. The Thai authorities suggest anyone wishing to enter Thailand contact the Thai Embassy in their home countries for correct information.</p>
-         <p class="read-more">Read more.
+         <a href="#" class="read-more">Read more</a>
     </section>
    </div> 
   <footer>
