--- a/code/index.html
+++ b/code/index.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,400;0,600;1,200&display=swap" rel="stylesheet">
   </head>
   <body>
+  <div class="pagewrapper">
     <header>
       <img src="news-site-logo.svg" alt="news site logo" class="logo">
-      <h1>BKK News
-      </h1>
+      <h1>BKK News</h1>
         <nav> 
           <ul>
             <li><a href="#">Home</a></li>
@@ -26,27 +26,25 @@
           </ul>  
         </nav>
     </header>
-    <div class="animation-line"></div>
-  
+<!-- image that separates the header and the content -->
+    <img src="bg-header.jpg" alt="" class="header-break-img">
   <!-- The big news content -->
   <section class="main-news">
-    <div class="main-news-img">
-      <img src="main-news.jpg" alt="">
-      </div>
-      <div class="main-news-content">
-        <h2>Koh Samui sandbox approved by the government</h2>
-              <p>From December 22nd 2021, Thailand has canceled their Test & Go program meaning all tourists travel by air need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
-              Luckily, Thailand has decided to open more destinations for their sandbox program. One of them includes the beautiful paradise island "Koh Samui".</p>
-            <a href="#" class="read-more">Read more</a>
-      </div>    
+      <img src="main-news.jpg" alt="" class="main-news-img">
+    <div class="main-news-content">
+      <h2>Koh Samui sandbox approved by the government</h2>
+          <p>From December 22nd 2021, Thailand has canceled their Test & Go program meaning all tourists travel by air need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
+          Luckily, Thailand has decided to open more destinations for their sandbox program. One of them includes the beautiful paradise island "Koh Samui".
+          </p>
+          <a href="#" class="read-more">Read more</a>
+    </div>    
   </section>
   <!-- The other news  -->
-  <div class="pagewrapper">
-          <img src="bg-header.jpg" alt="" class="header-img">
-    <section class="other-news 1">
+  <div class="other-news-wrapper">
+  <section class="other-news 1">
       <div class="other-news-img">
         <img src="other-news-1.jpg" alt="">
-          <h2>PM2.5 worsen during Chinese New Year</h2>
+          <h3>PM2.5 worsen during Chinese New Year</h3>
         </div>
             <p class="other-news-content">More burning during Chinese New Year and the cold air in January are the perfect combination of the beginning of Bankokians' lung cancer journey</p>
             <a href="#" class="read-more">Read more</a>
@@ -54,7 +52,7 @@
     <section class="other-news 2">
       <div class="other-news-img">
         <img src="other-news-2.jpg" alt="">
-          <h2>Bangkok plans to remove mass electric cables wiring on pole</h2>
+          <h3>Bangkok plans to remove mass electric cables wiring on pole</h3>
         </div>
             <p class="other-news-content">Bangkok surely does not want to loose its chaotic charm. We can talk about safety later because the cables have been there forever and no one dies so far (or noone knows).</p>
             <a href="#" class="read-more">Read more</a>
@@ -62,7 +60,7 @@
     <section class="other-news 3">
       <div class="other-news-img">
         <img src="other-news-3.jpg" alt="">
-        <h2>Social distancing applies in water</h2>
+        <h3>Social distancing applies in water</h3>
       </div>
           <p class="other-news-content">No exceptions, tourists renting paddle boats are to keep distance from others. Yet visiting public parks and rent a paddle boat are still worth it.</p>
           <a href="#" class="read-more">Read more</a>
@@ -70,7 +68,7 @@
     <section class="other-news 4">
       <div class="other-news-img">
         <img src="other-news-4.jpg" alt="">
-        <h2>Bangkok nightlife without tourists</h2>
+        <h3>Bangkok nightlife without tourists</h3>
       </div>
           <p class="other-news-content">2022 for Bangkok is just 2020 part II, the country's vaccination rate is still not as expected making its people worried about welcoming tourists back in to Thailand.</p>
           <a href="#" class="read-more">Read more</a>
@@ -78,7 +76,7 @@
     <section class="other-news 5">
       <div class="other-news-img">
         <img src="other-news-5.jpg" alt="">
-      <h2>City trains are for rich people</h2>
+      <h3>City trains are for rich people</h3>
     </div>
         <p class="other-news-content">Public transportation should not be too expensive. Bangkokians complain the Bangkok City Train fares are not in line with the minimum wage.</p>
         <a href="#" class="read-more">Read more</a>
@@ -86,7 +84,7 @@
     <section class="other-news 6">
       <div class="other-news-img">
         <img src="other-news-6.jpg" alt="">
-      <h2>Newspapers are dying</h2>
+      <h3>Newspapers are dying</h3>
     </div>
         <p class="other-news-content">With the rise of online news, the newspapers are dying. Sadly some people believe social media posts from random people are trustworthy-online news.</p>
         <a href="#" class="read-more">Read more</a>
@@ -94,7 +92,7 @@
     <section class="other-news 7">
       <div class="other-news-img">
        <img src="other-news-7.jpg" alt="">
-      <h2>Monsoon arrives too soon</h2>
+      <h3>Monsoon arrives too soon</h3>
     </div>
         <p class="other-news-content">Heavy rains start hitting bangkok in January. Good news is that it helps clear the PM2.5 and make it easier for Bangkokians to breath for once.</p>
         <a href="#" class="read-more">Read more</a>
@@ -102,15 +100,16 @@
     <section class="other-news 8">
       <div class="other-news-img">
         <img src="other-news-8.jpg" alt="">
-      <h2>Confusion around Thailand Pass</h2>
+      <h3>Confusion around Thailand Pass</h3>
     </div>
         <p class="other-news-content">There is still conflicting imformation on the internet. The Thai authorities suggest anyone wishing to enter Thailand contact the Thai Embassy in their home countries for correct information.</p>
          <a href="#" class="read-more">Read more</a>
     </section>
-   </div> 
-  <footer>
+  </div>
+</div>
+<footer>
     "Technigo Week#2 project. Coded by <a href="https://github.com/rawisou">Rawisara Saman.</a> Photos by <a href="https://www.flickr.com/photos/fredrik-photography/">Fredrik Magnusson.</a>."
-  </footer>
+</footer>
 </body>
 </html>
 
