Added logo and site name in the header

--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img class="logo" src="logo.svg" alt="logo" /> 
+      <span>Site name</span>
     </header>
 
     <section class="big-news">
