--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+        <nav class="nav-bar">
+            <h1 class="logo">News of today</h1>
+                <ol>
+                    <a href="">About</a>
+                    <a href="">More</a>
+                    <a href="">Contact</a>
+                </ol>
+        </nav>
     </header>
 
     <section class="big-news">
