added images and logo

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>📰 Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <img class="logo" src="images/news-site-logo.png">
+      <img class="menu-button" src="images/menu-button.png">
     </header>
 
     <section class="big-news">
-      <!-- The big news content -->
+      <img class="big-news-img" src="images/dachshund-car.jpg">
+      <p>This is the big news text</p>
     </section>
 
     <section class="">
       <!-- The other news  -->
     </section>
+
+    <footer>
+      <a href="https://www.flaticon.com/free-icons/menu" title="menu icons">Menu icons created by Google - Flaticon</a>
+    </footer>
   </body>
 </html>
