--- a/code/index.html
+++ b/code/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- displays site properly based on user's device -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2: The News Site</title>
+    <link rel="icon" type="image/png" href="logo.svg">
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,400;0,600;1,200&display=swap" rel="stylesheet">
+
+    <title> Technigo Project: The News Site</title>
   </head>
   <body>
     <header>
@@ -33,15 +36,16 @@
   <section class="main-news">
       <img src="main-news.jpg" alt="" class="main-news-img">
     <div class="main-news-content">
-      <h2>Koh Samui sandbox approved by the government</h2>
-          <p>From December 22nd 2021, Thailand has canceled their Test & Go program meaning all tourists travel by air need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
+      <h2>Koh Samui re-added to Sandbox Program</h2>
+      <hr>
+          <p>Thailand has canceled their Test & Go program meaning all tourists travel by air need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
           Luckily, Thailand has decided to open more destinations for their sandbox program. One of them includes the beautiful paradise island "Koh Samui".           <a href="#" class="read-more">Read more</a>
           </p>
     </div>    
   </section>
   <!-- The other news  -->
   <div class="other-news-wrapper">
-  <section class="other-news 1">
+  <section class="other-news">
       <div class="other-news-img">
         <img src="other-news-1.jpg" alt="">
           <h3>PM2.5 worsen during Chinese New Year</h3>
@@ -49,9 +53,8 @@
             <p class="other-news-content">More burning during Chinese New Year and the cold air in January are the perfect combination of the beginning of Bankokians' lung cancer journey.
               <a href="#" class="read-more">Read more</a>
             </p>
-  
     </section>
-    <section class="other-news 2">
+    <section class="other-news">
       <div class="other-news-img">
         <img src="other-news-2.jpg" alt="">
           <h3>Bangkok plans to remove mass electric cables wiring on pole</h3>
@@ -60,16 +63,16 @@
               <a href="#" class="read-more">Read more</a>
             </p>
     </section>
-    <section class="other-news 3">
+    <section class="other-news">
       <div class="other-news-img">
         <img src="other-news-3.jpg" alt="">
-        <h3>Social distancing applies in water</h3>
+        <h3>Social distancing in water</h3>
       </div>
           <p class="other-news-content">No exceptions, tourists renting paddle boats are to keep distance from others. Yet visiting public parks and rent a paddle boat are still worth it.
             <a href="#" class="read-more">Read more</a>
           </p>
     </section>
-    <section class="other-news 4">
+    <section class="other-news">
       <div class="other-news-img">
         <img src="other-news-4.jpg" alt="">
         <h3>Bangkok nightlife without tourists</h3>
@@ -78,7 +81,7 @@
             <a href="#" class="read-more">Read more</a>
           </p>
     </section>
-    <section class="other-news 5">
+    <section class="other-news">
       <div class="other-news-img">
         <img src="other-news-5.jpg" alt="">
       <h3>City trains are for rich people</h3>
@@ -87,7 +90,7 @@
           <a href="#" class="read-more">Read more</a>
         </p>
     </section>
-    <section class="other-news 6">
+    <section class="other-news">
       <div class="other-news-img">
         <img src="other-news-6.jpg" alt="">
       <h3>Newspapers are dying</h3>
@@ -96,7 +99,7 @@
           <a href="#" class="read-more">Read more</a>
         </p>
     </section>
-    <section class="other-news 7">
+    <section class="other-news">
       <div class="other-news-img">
        <img src="other-news-7.jpg" alt="">
       <h3>Monsoon arrives too soon</h3>
@@ -105,7 +108,7 @@
           <a href="#" class="read-more">Read more</a>
         </p>
     </section>
-    <section class="other-news 8">
+    <section class="other-news">
       <div class="other-news-img">
         <img src="other-news-8.jpg" alt="">
       <h3>Confusion around Thailand Pass</h3>
@@ -117,7 +120,7 @@
   </div>
 </div>
 <footer>
-   </p> Technigo Week#2 project. Created by <a href="https://github.com/rawisou">Rawisara Saman.</a></p>
+   </p> Created by <a href="https://github.com/rawisou">Rawisara Saman.</a> Photos by <a href="https://www.flickr.com/photos/fredrik-photography/">Fredrik Magnusson.</a></p>
 </footer>
 </body>
 </html>
