added alt texts to images

--- a/code/index.html
+++ b/code/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <img src="news-site-logo.svg" alt="news site logo" class="logo">
-      <img src="desktop-view-logo.svg" alt="" class="desktop-view-logo">
+      <img src="desktop-view-logo.svg" alt="news site logo desktop view" class="desktop-view-logo">
       <h1>BKK News</h1>
         <nav> 
           <ul>
@@ -30,11 +30,11 @@
         </nav>
     </header>
 <!-- image that separates the header and the content -->
-    <img src="bg-header.jpg" alt="" class="header-break-img">
+    <img src="bg-header.jpg" alt="header and content seperation image" class="header-break-img">
   <!-- The big news content -->
   <div class="news-container">
   <section class="main-news">
-      <img src="main-news.jpg" alt="" class="main-news-img">
+      <img src="main-news.jpg" alt="koh samui view" class="main-news-img">
     <div class="main-news-content">
       <h2>Koh Samui re-added to Sandbox Program</h2>
       <hr>
@@ -47,7 +47,7 @@
   <div class="other-news-wrapper">
   <section class="other-news">
       <div class="other-news-img">
-        <img src="other-news-1.jpg" alt="">
+        <img src="other-news-1.jpg" alt="chinese new year paper burning">
           <h3>PM2.5 worsen during Chinese New Year</h3>
         </div>
             <p class="other-news-content">More burning during Chinese New Year and the cold air in January are the perfect combination of the beginning of Bankokians' lung cancer journey.
@@ -56,7 +56,7 @@
     </section>
     <section class="other-news">
       <div class="other-news-img">
-        <img src="other-news-2.jpg" alt="">
+        <img src="other-news-2.jpg" alt="electric cables wiring on pole">
           <h3>Bangkok plans to remove mass electric cables wiring on pole</h3>
         </div>
             <p class="other-news-content">Bangkok surely does not want to loose its chaotic charm. We can talk about safety later because the cables have been there forever and no one dies so far (or noone knows).
@@ -65,7 +65,7 @@
     </section>
     <section class="other-news">
       <div class="other-news-img">
-        <img src="other-news-3.jpg" alt="">
+        <img src="other-news-3.jpg" alt="paddle boats in bangkok">
         <h3>Social distancing in water</h3>
       </div>
           <p class="other-news-content">No exceptions, tourists renting paddle boats are to keep distance from others. Yet visiting public parks and rent a paddle boat are still worth it.
@@ -74,7 +74,7 @@
     </section>
     <section class="other-news">
       <div class="other-news-img">
-        <img src="other-news-4.jpg" alt="">
+        <img src="other-news-4.jpg" alt="bangkok chinatown at night">
         <h3>Bangkok nightlife without tourists</h3>
       </div>
           <p class="other-news-content">2022 for Bangkok is just 2020 part II, the country's vaccination rate is still not as expected making its people worried about welcoming tourists back in to Thailand.
@@ -83,7 +83,7 @@
     </section>
     <section class="other-news">
       <div class="other-news-img">
-        <img src="other-news-5.jpg" alt="">
+        <img src="other-news-5.jpg" alt="pakced bts train">
       <h3>City trains are for rich people</h3>
     </div>
         <p class="other-news-content">Public transportation should not be too expensive. Bangkokians complain the Bangkok City Train fares are not in line with the minimum wage.
@@ -92,7 +92,7 @@
     </section>
     <section class="other-news">
       <div class="other-news-img">
-        <img src="other-news-6.jpg" alt="">
+        <img src="other-news-6.jpg" alt="street newspaper stall">
       <h3>Newspapers are dying</h3>
     </div>
         <p class="other-news-content">With the rise of online news, the newspapers are dying. Sadly some people believe social media posts from random people are trustworthy-online news.
@@ -101,7 +101,7 @@
     </section>
     <section class="other-news">
       <div class="other-news-img">
-       <img src="other-news-7.jpg" alt="">
+       <img src="other-news-7.jpg" alt="rainy day at night in bangkok">
       <h3>Monsoon arrives too soon</h3>
     </div>
         <p class="other-news-content">Heavy rains start hitting bangkok in January. Good news is that it helps clear the PM2.5 and make it easier for Bangkokians to breath for once.
@@ -110,7 +110,7 @@
     </section>
     <section class="other-news">
       <div class="other-news-img">
-        <img src="other-news-8.jpg" alt="">
+        <img src="other-news-8.jpg" alt="bangkok bts station">
       <h3>Confusion around Thailand Pass</h3>
     </div>
         <p class="other-news-content"> There is still conflicting imformation on the internet. The Thai authorities suggest anyone wishing to enter Thailand contact the Thai Embassy in their home countries for correct information.
